# Datalog_Interpreter

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  Datalog Interpreter  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  IdAutomaton.cpp  IdAutomaton.h  Left_ParenAutomaton.cpp  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.h  Q_MarkAutomaton.cpp  Q_MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Right_ParenAutomaton.cpp  Right_ParenAutomaton.h  Rule.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  (+13 more)
Datalog Interpreter.dSYM/Contents/: Info.plist
Datalog Interpreter.dSYM/Contents/Resources/DWARF/: Datalog Interpreter
Lab1PassOffCases/1-100/: answer1.txt  answer2.txt  input1.txt
Lab1PassOffCases/1-70/: answer1.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  answernoway.txt  input1.txt  input3.txt  input4.txt  input6.txt  input7.txt  inputnoway.txt
Lab1PassOffCases/1-90/: answer1.txt  answer2.txt  answer3.txt  input1.txt  input2.txt  input3.txt
lab1.dSYM/Contents/Resources/DWARF/: lab1
lab2.dSYM/Contents/Resources/DWARF/: lab2
