cmake_minimum_required(VERSION 3.19)
project(Datalog_Interpreter)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Datalog_Interpreter
        Automaton.h
        ColonAutomaton.cpp
        ColonAutomaton.h
        ColonDashAutomaton.cpp
        ColonDashAutomaton.h
        CommaAutomaton.cpp
        CommaAutomaton.h
        PeriodAutomaton.cpp
        PeriodAutomaton.h
        Q_MarkAutomaton.cpp
        Q_MarkAutomaton.h
        Left_ParenAutomaton.cpp
        Left_ParenAutomaton.h
        Right_ParenAutomaton.cpp
        Right_ParenAutomaton.h
        StringAutomaton.cpp
        StringAutomaton.h
        UndefinedStringAutomaton.cpp
        UndefinedStringAutomaton.h
        UndefinedCommentAutomaton.cpp
        UndefinedCommentAutomaton.h
        LineCommentAutomaton.cpp
        LineCommentAutomaton.h
        BlockCommentAutomaton.cpp
        BlockCommentAutomaton.h
        MultiplyAutomaton.cpp
        MultiplyAutomaton.h
        AddAutomaton.cpp
        AddAutomaton.h
        SchemesAutomaton.cpp
        SchemesAutomaton.h
        FactsAutomaton.cpp
        FactsAutomaton.h
        RulesAutomaton.cpp
        RulesAutomaton.h
        QueriesAutomaton.cpp
        QueriesAutomaton.h
        IdAutomaton.cpp
        IdAutomaton.h
        Lexer.cpp
        Lexer.h
        DatalogProgram.cpp
        DatalogProgram.h
        Predicate.h
        Rule.h
        Parameter.h
        Parser.cpp
        Parser.h
        main.cpp
        Token.cpp
        Token.h)
